MGN-1426 #resolve #comment Fixing footer overlap on signin/signup

--- a/skin/frontend/enterprise/bootstrap/css/style.css
+++ b/skin/frontend/enterprise/bootstrap/css/style.css
@@ -1595,6 +1595,10 @@ body > footer small .container {
 }
 
 /* login/register pages footer */
+#footerpush { /* @KLUDGE: hackish fix for footer overlap on login/signup page */
+    height:680px; 
+    padding-bottom:98px;
+}
 body.customer-account-login #footer ul {
     float: left;
 }
